Fixed weird white space at the bottom of the app.

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -62,10 +62,10 @@ img {
 }
 
 /* Optional: Makes the sample page fill the window. */
-html, body {
-    height: 100%;
+// html, body {
+//     height: 100%;
 
-}
+// }
 
 /*----------------------------------------
     landing page
